Checkout: fixed scrollbar inside order summary sidebar

--- a/web/css/layout/checkout/_summary.less
+++ b/web/css/layout/checkout/_summary.less
@@ -27,6 +27,11 @@
         .opc-estimated-wrapper {
             display: none;
         }
+        .opc-sidebar {
+            .modal-content {
+                overflow: visible;
+            }
+        }
     }
 
     .opc-summary-wrapper {
